Fix: Fixed wrong font color

--- a/gym-app_web/Frontend/ProyectoFinal_GymApp/src/app/pages/perfil/mi-cuenta/mi-cuenta.component.scss
+++ b/gym-app_web/Frontend/ProyectoFinal_GymApp/src/app/pages/perfil/mi-cuenta/mi-cuenta.component.scss
@@ -60,7 +60,7 @@
 
   .user p > span {
     display: block;
-    color: $light-color-font;
+    color: $profile-font-color-alternate;
   }
 
   .btn {
